<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_timer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.spbstu.ptime.TimerActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timerChronometer"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="72dp">

        <Button
            android:id="@+id/timerBtnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timerBtnStartText"
            android:onClick="onTimerStartClick"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:elevation="0dp"
            android:fontFamily="sans-serif-medium" />

        <Button
            android:id="@+id/timerBtnSetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timerBtnSetTimeText"
            android:onClick="onTimerSetTimeClick"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp" />

        <Button
            android:id="@+id/timerBtnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timerBtnStopText"
            android:onClick="onTimerStopClick"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:fontFamily="sans-serif-medium" />

    </LinearLayout>

    <Chronometer
        android:id="@+id/timerChronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:keepScreenOn="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textSize="80sp"
        android:text="@string/timerDefText"/>

    <ProgressBar
        android:id="@+id/timerProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timerChronometer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="?android:attr/progressBarStyleHorizontal" />

</RelativeLayout>